Bug 1050360 - Fix script blocker warning (r=smaug)